WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
266536
REGRESSION(
271261@main
): [GTK][WPE] Rendering breaks after back/forward navigation
https://bugs.webkit.org/show_bug.cgi?id=266536
Summary
REGRESSION(271261@main): [GTK][WPE] Rendering breaks after back/forward navig...
Michael Catanzaro
Reported
2023-12-16 06:46:35 PST
In Ephy Tech Preview with WebKitGTK 2.43.2, web view rendering breaks after back/forward navigations. For example: * Visit
bug #266534
* Visit the attachment in the first comment * Navigate back Normally the web view breaks there and the page will not be rendered. If not, navigate forward and it should break.
Attachments
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2024-01-12 03:26:08 PST
This regressed in
271261@main
. The problem is that after history navigation sometimes updateCompositingLayers is not called, so compositing is not enabled again and the root layer is not set in the drawing area.
Carlos Garcia Campos
Comment 2
2024-01-12 03:26:59 PST
That patch also caused a regression in the element application (matrix chat) that doesn't scroll correctly the frame when sending messages.
Carlos Garcia Campos
Comment 3
2024-01-12 03:30:57 PST
(In reply to Carlos Garcia Campos from
comment #2
)
> That patch also caused a regression in the element application (matrix chat) > that doesn't scroll correctly the frame when sending messages.
Nah, I spoke too soon, the element bug is still there.
Carlos Garcia Campos
Comment 4
2024-01-29 07:21:52 PST
***
Bug 268289
has been marked as a duplicate of this bug. ***
Vitaly Dyackhov
Comment 5
2024-01-30 02:38:09 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23419
EWS
Comment 6
2024-01-30 06:52:15 PST
Committed
273750@main
(f8bdcd70b267): <
https://commits.webkit.org/273750@main
> Reviewed commits have been landed. Closing PR #23419 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug