REGRESSION(271261@main): [GTK][WPE] Rendering breaks after back/forward navigation https://bugs.webkit.org/show_bug.cgi?id=266536

Reviewed by Carlos Garcia Campos.

We should not prevent flushing layer changes when the compositing
coorinator doesn't have associated root compositing layer.

Doing so prevents a page to be rendered after restoring from the
BackForwardCache.

The root compositing layer will be created later when needed.

* LayoutTests/platform/wpe/TestExpectations:
* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/LayerTreeHost.cpp:
(WebKit::LayerTreeHost::layerFlushTimerFired):

Canonical link: https://commits.webkit.org/273750@main